# Projects-Pico

Blutooh_test/: Blutooh_test.c  CMakeLists.txt
Hookah_Project/: CMakeLists.txt  Hookah_Project.c  ssd1306.c  ssd1306.h
Pico_Project/: CMakeLists.txt  Pico_Project.c
Pico_Pwm_Led/: CMakeLists.txt  Pico_Pwm_Led.c
Pico_Temperature_SPI/: CMakeLists.txt  Pico_Temperature_SPI.c
cmake-3.19.4/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
cmake-3.19.4/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.19.4/Auxiliary/bash-completion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.19.4/Bootstrap.cmk/: InitialCacheFlags.cmake  cmConfigure.h  cmVersionConfig.h
cmake-3.19.4/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
cmake-3.19.4/Source/: CMakeVersion.cmake  CTestTestfile.cmake  Makefile  cmVersionConfig.h  cmake_install.cmake
cmake-3.19.4/Source/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testConsoleBufChild  testSharedForward.c  testSystemTools.h
cmake-3.19.4/Testing/CoberturaCoverage/: DartConfiguration.tcl  coverage.xml
cmake-3.19.4/Testing/DelphiCoverage/: DartConfiguration.tcl
cmake-3.19.4/Testing/JacocoCoverage/: DartConfiguration.tcl
cmake-3.19.4/Testing/JavascriptCoverage/: DartConfiguration.tcl  output.json
cmake-3.19.4/Testing/MumpsCacheCoverage/: DartConfiguration.tcl
cmake-3.19.4/Testing/MumpsCoverage/: DartConfiguration.tcl  gtm_coverage.mcov
cmake-3.19.4/Testing/PythonCoverage/: DartConfiguration.tcl
cmake-3.19.4/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
cmake-3.19.4/Tests/CMakeLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runcompilecommands  testAffinity  testEncoding  testUVProcessChainHelper  testXMLParser.h
cmake-3.19.4/Tests/CMakeOnly/: CTestTestfile.cmake  Makefile  Test.cmake  cmake_install.cmake
cmake-3.19.4/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+148 files in other folders)
